[gd_scene load_steps=2 format=3 uid="uid://b6ym7222uqqcm"]

[ext_resource type="Script" path="res://game/ui/stat_display.gd" id="1_u6kvp"]

[node name="StatDisplay" type="Control"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_u6kvp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatName" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Health"

[node name="StatValue" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "10"
